2005-10-14  Dennis Cranston  <dennis_cranston@yahoo.com>

	* help/C/gnome-search-tool-C.omf:  Fix bug 318876.  Change help 
	documentation category to GNOME|Utilities.  Patch provided
	by Brent Smith.

2005-10-09  Dennis Cranston  <dennis_cranston@yahoo.com>

	Discovered this CPU optimization while using sysprof from
	http://www.daimi.au.dk/~sandmann/sysprof/.

	* gsearchtool.h: Add thumbnail_factory to GSearchWindow.
	* gsearchtool-support.c: (gsearchtool_icon_lookup):  Remove
	the local thumbnail_factory and use the one added to the
	GSearchWindow structure. Only call gnome_thumbnail_factory_new()
	if thumbnail_factory is null.
	* gsearchtool.c: (handle_search_command_stdout_io):  Unref
	and null thumbnail_factory.
	
2005-10-03  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gsearchtool.c: (build_search_command):
	Fix bug 317147, "search for files also search in the parent 
	directory". Patch provided by Emmanuel Touzery.
	(gsearch_app_create) Small HIG button spacing adjustment.

==================== 2.12.0 ====================

2005-08-10  Dennis Cranston  <dennis_cranston@yahoo.com>

	* gnome-search-tool.1:  Update for 2.12.
	* help/C/gnome-search-tool.xml: Update for 2.12.

2005-08-01  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c (setup_case_insensitive_arguments):
	Fix bug 312136, "gsearchtool tries to locate /dev/null
	and fails on systems that don't index /dev".
	
2005-07-31  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c (build_search_commmand):  Fix the gconf
	disable_quick_search_second_scan key name.
	
2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool.c  (spawn_search_command):  Do not set the
	single_click_to_activate value here.
	
2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>

	* gsearchtool-support.c: (get_file_pixbuf):  Protect against 
	thumbnail_pixbuf == NULL warnings.
	
2005-07-23  Dennis Cranston <dennis_cranston@yahoo.com>
